--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,3 +7,17 @@ body {
 .row {
 	margin-top: 50px;
 }
+
+.jumbotron {
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+.navbar-link {
+	font-weight: 200;
+	font-size: 18px;
+}
+
+.bio {
+	font-size: 18px !important;
+}
